# tuxedo-infinitybook-gen10-cc-plugin

./: Cargo.toml  Makefile  README.md  manifest.toml
.flox/: env.json
.flox/env/: manifest.toml
.github/: dependabot.yml
.github/workflows/: build.yml
src/: main.rs  service.rs  tuxedo_io.rs
src/sys/: ioctl.rs  mod.rs
